css/xpather.css
#xpather {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	height: 50px;
	width: 100%;
	padding: 0 208px 0 52px;
	font-family: Helvetica, Arial, Verdana, sans-serif;
	border-bottom: 1px solid #111;
	box-sizing: border-box;
	box-shadow: 0 4px 12px rgba(50, 50, 50, .35);
	background: #222 url('chrome-extension://__MSG_@@extension_id__/img/search.png') 12px 12px no-repeat;
	z-index: 10000;
	text-shadow: none;
}

#xpather-form {
	margin: 0;
	padding: 0;
}

#xpather-xpath {
	background: #222;
	border: 0;
	font-size: 16px;
	font-weight: 400;
	font-family: monospace;
	color: #fff;
	line-height: 42px;
	padding: 4px 0;
	height: 49px;
	width: 100%;
	box-sizing: border-box;
	box-shadow: none;
	outline: 0;
	margin: 0;
}

#xpather-result {
	position: absolute;
	right: 58px;
	top: 0;
	font-size: 28px;
	font-weight: 700;
	color: #fff;
	line-height: 50px;
}

#xpather-result.no-results {
	color: #ff4630;
}

#xpather-sidebar-toggler {
	position: absolute;
	top: 12px;
	right: 16px;
	width: 26px;
	height: 26px;
	cursor: pointer;
	background: url('chrome-extension://__MSG_@@extension_id__/img/sidebar-toggler.png') 0 0 no-repeat;
}

.xpather-sidebar-toggler-active {
	background-position: 0 -26px !important;
}

#xpather-sidebar {
	position: fixed;
	top: 0;
	right: 0;
	width: 20%;
	height: 100%;
	box-sizing: border-box;
	top: 50px;
	padding-bottom: 50px;
	background: #111;
	z-index: 10000;
	display: none;
	overflow-x: hidden;
	overflow-y: auto;
	font-family: Helvetica, Arial, Verdana, sans-serif;
	text-shadow: none;
}

.xpather-sidebar-entry {
	position: relative;
	width: 100%;
	min-height: 39px;
	max-height: 86px;
	box-sizing: border-box;
	padding: 10px 16px;
	font-size: 12px;
	line-height: 18px;
	clear: both;
	text-align: justify;
	border-bottom: 1px solid #111;
	word-wrap: break-word;
	overflow: hidden;
	text-overflow: ellipsis;
	cursor: pointer;
	transition: max-height 400ms;
}

.xpather-sidebar-entry span {
	position: relative;
	z-index: 2;
}

.xpather-sidebar-entry:hover {
	max-height: 100%;
	background: #0c0c0c !important;
}

.xpather-sidebar-entry:nth-child(odd) {
	background: #1a1a1a;
	color: #ccc;
}

.xpather-sidebar-entry:nth-child(even) {
	background: #222;
	color: #999;
}

.xpather-sidebar-entry-info {
	color: #555 !important;
}

.xpather-sidebar-entry-count {
	position: absolute;
	bottom: 1px;
	right: 8px;
	font-size: 36px;
	color: #303030;
	font-weight: 700;
}

.xpather-highlight {
	background: rgba(237, 194, 20, .25) !important;
	z-index: 9999 !important;
	border-bottom: 2px solid rgb(170, 130, 10) !important;
}

.xpath-important-highlight {
	background: rgba(237, 55, 33, 0.50) !important;
	border-bottom: 2px solid rgb(185, 55, 37) !important;
	box-shadow: 0 0 12px rgb(185, 55, 37) !important;
}

.xpather-on {
	margin-top: 50px !important;
}

.xpather-sidebar-on {
	width: 80% !important;
}

